--- a/index.html
+++ b/index.html
@@ -92,31 +92,44 @@
           </article>
         </div>
       </section>
+<section class="skills" id="skills">
+  <h2>Skills</h2>
 
-      <section class="skills" id="skills">
-        <h2>Skills</h2>
+  <div class="skill">
+    <p>HTML <span>80%</span></p>
+    <div class="barra">
+      <div class="preenchido" style="width: 80%"></div>
+    </div>
+  </div>
 
-        <ul class="skills-lista">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>Git</li>
-          <li>Responsivo</li>
-          <li>Flexbox</li>
-        </ul>
-      </section>
+  <div class="skill">
+    <p>CSS <span>70%</span></p>
+    <div class="barra">
+      <div class="preenchido" style="width: 70%"></div>
+    </div>
+  </div>
+
+  <div class="skill">
+    <p>Git <span>50%</span></p>
+    <div class="barra">
+      <div class="preenchido" style="width: 50%"></div>
+    </div>
+  </div>
+</section>
 
       <section class="sobre" id="sobre">
         <h2>Quem sou eu?</h2>
 
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos magnam,
-          facilis qui esse maxime necessitatibus suscipit in delectus non ea
-          voluptates natus quisquam libero architecto, voluptatem quam
-          cupiditate praesentium veniam.
+          Sou o Diovanny, desenvolvedor em formação focado em criar sites rápidos,              organizados e que funcionam bem em qualquer tela. Estou em uma fase intensa de              aprendizado, construindo projetos reais enquanto evoluo minha base técnica em              HTML, CSS e desenvolvimento responsivo.
+
+          Gosto de entender como as coisas funcionam de verdade, não só copiar soluções.              Por isso estudo com consistência, pratico todos os dias e busco melhorar a              cada projeto. Meu foco é crescer de forma sólida, desenvolver habilidades              reais e entregar resultados cada vez melhores.
+          
+          Acredito em três coisas simples: evolução constante, disciplina diária e fazer              bem feito mesmo quando ninguém está vendo.
         </p>
 
         <ul class="sobre-pontos">
-          <li>Foco</li>
+          <li>Foco</li>             
           <li>Disciplina</li>
           <li>Evolução</li>
         </ul>
