--- a/index.html
+++ b/index.html
@@ -129,9 +129,15 @@
         </p>
 
         <ul class="sobre-pontos">
-          <li>Foco</li>             
-          <li>Disciplina</li>
-          <li>Evolução</li>
+          <strong>
+            <li>Foco</li>    
+          </strong>         
+          <strong>
+            <li>Disciplina</li>
+          </strong>
+          <strong>
+            <li>Evolução</li>
+          </strong>
         </ul>
       </section>
 
