final (projeto iniciial )

--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
           <h1>Sites rápidos, bonitos e responsivos.</h1>
 
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-            soluta delectus illum tempora omnis explicabo consequatur quos,
-            unde, expedita, quaerat sit nulla quae quidem nihil ducimus incidunt
-            laborum possimus voluptatum.
+Desenvolvo sites modernos, rápidos e totalmente responsivos, pensados para oferecer a melhor experiência em qualquer dispositivo. Meu foco é unir design limpo, desempenho e organização para transformar ideias em páginas que realmente funcionam.
           </p>
 
           <div class="hero-botoes">
@@ -162,7 +159,7 @@
               id="iemail"
               type="email"
               name="email"
-              placeholder="Digite seu email"
+              placeholder="Exemple123@exemple.com"
               required
             />
           </p>
@@ -179,7 +176,7 @@
             ></textarea>
           </p>
 
-          <button type="submit">Enviar Mensagem</button>
+          <div class="botao"><button type="submit">Enviar Mensagem</button></div>
         </form>
 
         <div class="redes">
