--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ Desenvolvo sites modernos, rápidos e totalmente responsivos, pensados para ofer
               alinhamento e comportamento responsivo da interface.
             </p>
             <div class="img-box">
-              <img src="imagens/redescell.png" alt="" />
+              <img class="img-grande" src="imagens/redescell.png" alt="" />
             </div>
           </article>
         </div>
